[package]
name = "boring-boring2"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio={version="1", features=["full"]}
tokio-quiche="0.15"
wreq={version = "6.0.0-rc.28", features=["prefix-symbols"]}
# wreq={version = "6.0.0-rc.28"} # works, but i guess its just luck that it doesnt segfault
futures="*"
wreq-util="3.0.0-rc.10"
snafu="*"

[patch.crates-io.tokio-boring2]
# git="https://github.com/JakubKoralewski/boring2.git"
path = "/home/username/projects/project/boring2/tokio-boring"

[patch.crates-io.boring2]
# git="https://github.com/JakubKoralewski/boring2.git"
path = "/home/username/projects/project/boring2/boring"
